# signals-rs

./: .gitignore  .travis-key.json.enc  .travis.yml  Cargo.toml  README.md  Settings.toml.sample  skaffold.yaml
docker/: Dockerfile  migrations.Dockerfile
docs/site/: index.html
docs/src/: SUMMARY.md  api.agents.create.md  api.agents.delete.md  api.agents.join_room.md  api.agents.leave_room.md  api.agents.list.md  api.agents.md  api.agents.read.md  api.agents.update.md  api.rooms.create.md  api.rooms.delete.md  api.rooms.list.md  api.rooms.md  api.rooms.read.md  api.signals.answer.md  api.signals.candidate.md  api.signals.md  api.signals.offer.md  api.subscriptions.create.md  api.subscriptions.md  api.tracks.create.md  api.tracks.delete.md  api.tracks.list.md  api.tracks.md  api.tracks.unregister.md  concepts.md  overview.md  usage.md
k8s/: _signals-configmap.yml  migrations-cloud-sql.yaml  signals-config.yml  signals-deployment.yml  signals.yaml
k8s/cloud-sql/: signals.yaml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-02-07-124420_create_room/: down.sql  up.sql
migrations/2018-02-07-124420_create_rooms/: up.sql
migrations/2018-02-09-091546_create_agent/: down.sql  up.sql
migrations/2018-02-09-091546_create_agents/: down.sql  up.sql
migrations/2018-02-26-105343_create_local_track/: down.sql  (+1 more)
scripts/: docker.image.publish.sh  gcloud.install.sh  k8s.chart.download.sh  k8s.charts.apply.sh  k8s.install.sh
src/: error.rs  errors.rs  lib.rs  main.rs  messages.rs  models.rs  rpc.rs  schema.rs  settings.rs  topic.rs  version.rs
(+44 files in other folders)
