[package]
name = "signals"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
rumqtt = "0.10.1"
error-chain = "0.11.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
nom = "4.0.0-beta1"
diesel = { version = "1.1.1", features = ["postgres", "uuid", "r2d2"] }
uuid = { version = "0.5.1", features = ["serde"] }
jsonrpc-core = "8.0.1"
jsonrpc-macros = "8.0.0"
