[package]
name = "signals"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
rumqtt = "0.10.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
nom = "4.0.0-beta1"
diesel = { version = "1.1.1", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json"] }
uuid = { version = "0.5.1", features = ["serde"] }
jsonrpc-core = "8.0.1"
jsonrpc-macros = "8.0.0"
chrono = { version = "0.4.0", features = ["serde"] }
failure = "0.1"
# config = "0.8"
config = { path = "/Users/aleksey/Code/github/config-rs" }
lazy_static = "1.0"

[dev-dependencies]
toml = "*"
